Fixing font face on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@ main {
     align-items: center;
     justify-content: center;
     text-align: center;
-    text-shadow: 2px 1px rgba(0, 0, 0, 0.182);
+    
 }
 
 #date {
@@ -67,7 +67,7 @@ main {
     justify-content: center;
     margin: 2em 0 0 0;
     text-decoration: underline;
-    text-shadow: 2px 1px rgba(0, 0, 0, 0.182);
+    
     font-size: 24px;
 }
 
@@ -83,7 +83,7 @@ main {
 #bridesmaid-title, #groomsmen-title {
     text-decoration: underline;
     font-size: 24px;
-    text-shadow: 2px 1px rgba(0, 0, 0, 0.182);
+    
 }
 
 #left-list:nth-child(1), #right-list:nth-child(1) {
@@ -107,7 +107,7 @@ main {
 #procession-title {
     text-decoration: underline;
     font-size: 24px;
-    text-shadow: 2px 1px rgba(0, 0, 0, 0.182);
+    
 }
 
 #event-ol {
